<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:scrollbarSize="24sp"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/locationView2"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/location"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tempView2"
        android:layout_width="115dp"
        android:layout_height="68dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="136dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_0_c"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/weatherConditionView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/windView2"
        android:layout_width="113dp"
        android:layout_height="71dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_0_m_s"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/weatherConditionView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/weatherConditionView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/weather_condition"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/feelsLikeView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/feelsLikeView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/feels_like"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="228dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="openAPI_Activity"
        android:text="@string/check_weather"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="147dp"
        android:layout_height="163dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/weatherConditionView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/sunny" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityTILayAPI"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="530dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cityEtMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>